--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="tik">
             <img src="tik-tok-glitch-icon-social-media-tik-tok-icon-vinnitsa-ukraine-february-22-02-2023_250246-536.avif" alt="Tiktok">
-            <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Ftiktok.com%2F%40mohamed.omar8359%3Ffbclid%3DIwZXh0bgNhZW0CMTAAYnJpZBExQzdRQ1JoUGFXcGNodkpBZnNydGMGYXBwX2lkEDIyMjAzOTE3ODgyMDA4OTIAAR6TCpaPUUhO0CAwUeyTlKsv4M0tEyAyeAkFNdakZkacWw1dMt3Msp3U7vuVRw_aem_Odu8lb6oq7118aXjihhzGA&h=AT1YA-nyLA5kkMCTWLjbIZd9SVlFdzfMXjSFGVMP4X-A07K6yOoJYqRPbbbWYJlVzice0Jz4QuHFev9k7XXpoNnrzmgvp5-P-GPAcM4TUikdFoxtnNJhB_nmwTYTSYxTe0D9" target="_blank">Tiktok</a>
+            <a href="https://www.tiktok.com/@mohamed.omar8359?is_from_webapp=1" target="_blank">Tiktok</a>
         </div>
         <div class="inst">
             <img src="instagram-logo-icon_1273375-1177.avif" alt="insta">
@@ -35,4 +35,5 @@
     </footer>
     
 </body>
+
 </html>
